raw/AISLAM AZ ZAHARA NIQUITA 6435 245150207111057/2024-11-14-10-41-00.ceg/compilation.txt
NT.java:21: error: cannot find symbol
            switch (i % panjang) {
                        ^
  symbol:   variable panjang
  location: class NT
1 error
Not compiled
